--- a/test.html
+++ b/test.html
@@ -5,8 +5,18 @@
         <title>Mobile POC</title>
         <link rel='stylesheet' media='all' href=''/>
         <meta name='viewport' content='width=device-width, initial-scale=1'/>
+        
+        <!--
         <link href="public/app/libs/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" />
         <script src="public/app/libs/sencha-touch-debug.js"></script>
+        <script src="public/app/test/testApp.js"></script>
+        -->
+        <link href="public/app/libs/sencha-touch-2-b1/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" />
+        <link href="public/app/libs/sencha-touch-2-b1/resources/css/android.css" rel="stylesheet" type="text/css" />
+        <link href="public/app/libs/sencha-touch-2-b1/resources/css/apple.css" rel="stylesheet" type="text/css" />
+        <script src="public/app/libs/sencha-touch-2-b1/sencha-touch-all-debug.js"></script>
+        <script src="public/app/test/testApp2.js"></script>
+       
     </head>
     <body>
     </body>
